# QuickMethods

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_testpypi.yml
quickMethods/: __init__.py  beta.py  main.py
workflows/: publish_to_pypi.yml  publish_to_testpypi.yml
