[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickMethods"
version = "0.0.4"
requires-python = ">= 3.8"
authors = [
  {name = "Orly Neto", email = "orly2carvalhoneto@gmail.com"},
]
maintainers = [
  {name = "Orly Neto", email = "orly2carvalhoneto@gmail.com"}
]
license = {file = "LICENSE"}
dynamic = ["readme"]

[project.urls]
Repository = "https://github.com/Stalot/QuickMethods"
Issues = "https://github.com/Stalot/QuickMethods/issues"
Changelog = "https://github.com/Stalot/QuickMethods/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["quickMethods*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}